# m8-haskell-compiler

./: .gitignore  README.md  alphascript.cabal  compiler.cabal  ex-for.txt  ex-scoping.txt  main.sh  package.yaml  run.sh  stack.yaml  test.txt  todo.txt
app/: Main.hs
demo/: arrays.txt  banking.as  banking.txt  basic.as  basic.txt  ex-scoping.txt  ex-while.txt  exampleFork.hs  fib.as  fib.txt  fork.txt  functions.as  funs.txt  if-else.txt  loops.txt  math.as  math.txt  parallel.txt  parallels.as  peterson.as  peterson.txt  scopes.txt  string.txt  strings.as  test_conx.txt  while.txt
examples/: fib.as
notes/: Sprockell.hs  backend.txt  scoping.txt  sprockell.txt
src/: CodeGen.hs  CodeGenTest.hs  Compiler.hs  Debugger.hs  Elaborator.hs  Lexer.hs  Main.hs  Parser.hs  PostParser.hs  PreCompiler.hs  Runner.hs  Scopes.hs  SprockellExt.hs  Syntax.hs  SyntaxTest.hs
src/Common/: Sprockell.hs  SprockellExt.hs  Table.hs
src/Test/: Evaluator.hs
src/Utils/: Sprockell.hs  Table.hs
src/test/: ParserTest.hs
src/tests/: ContextualTests.hs  SyntaxTests.hs
src/utils/: Table.hs
test/: CodeGen.hs  CodeGenEx.hs  CodeGenTest.hs  ContextualTest.hs  ElaboratorTest.hs  Main.hs  SemanticsTest.hs  SemanticsTests.hs  SyntaxTest.hs
